# hst123

./: .buildinfo  .gitignore  LICENSE.txt  README.md  api.html  changelog.html  environment.yml  genindex.html  hst123.py  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  user_guide.html  zeropoints.html
.github/workflows/: build-test.yml  main.yml  publish-pypi.yml
_modules/: index.html
_modules/hst123/: _pipeline.html
_modules/hst123/datamodels/: hst_model.html
_modules/hst123/primitives/: base.html
_modules/hst123/utils/: dolphot_catalog_hdf5.html  options.html  paths.html  stdio.html  workdir_cleanup.html
_sources/: api.rst.txt  changelog.md.txt  index.rst.txt  user_guide.rst.txt
_static/: documentation_options.js  hst123-docs.css
common/: Options.py  Settings.py
docs/: Makefile  api.rst  changelog.md  conf.py  index.md  index.rst  installation.rst  user_guide.rst  zeropoints.md
docs/_templates/: layout.html
hst123/: __init__.py  __main__.py  _pipeline.py  dolphot_install.py  settings.py
hst123/common/: Settings.py
hst123/datamodels/: __init__.py  base_model.py  hst_model.py
hst123/primitives/: __init__.py  base.py  fits.py  photometry.py  primitive_cleanup.py
hst123/primitives/astrometry/: __init__.py  alignment_meta.py  astrometry_primitive.py  jhat.py
hst123/primitives/run_dolphot/: __init__.py  run_dolphot_primitive.py
hst123/primitives/scrape_dolphot/: __init__.py  scrape_dolphot_primitive.py
hst123/scripts/: construct_hst_archive.py  test_astrodrizzle.py  update_changelog.py
hst123/utils/: __init__.py  alignment_validation.py  astrodrizzle_helpers.py  astrodrizzle_paths.py  display.py  dolphot_catalog_hdf5.py  dolphot_mask.py  dolphot_sky.py  dolphot_splitgroups.py  logging.py  options.py  paths.py  progress_log.py  reference_download.py  stdio.py  stsci_wcs.py  visit.py  wcs_utils.py  workdir_cleanup.py
hst123/utils/stwcs/: STWCS_VENDOR.txt  __init__.py  version.py
hst123/utils/stwcs/distortion/: coeff_converter.py  models.py  mutil.py  utils.py
hst123/utils/stwcs/updatewcs/: __init__.py  apply_corrections.py  astrometry_utils.py  corrections.py  det2im.py  makewcs.py  npol.py  updatehdr.py  utils.py  wfpc2_dgeo.py
hst123/utils/stwcs/wcsutil/: __init__.py  altwcs.py  convertwcs.py  getinput.py  headerlet.py  hstwcs.py  instruments.py  mappings.py  mosaic.py  wcscorr.py  wcsdiff.py
primitives/: __init__.py  fits.py  photometry.py
scripts/: run_hst_snii_proposal_17070.py  run_sn2021tyw.sh  run_tweakreg.py  test_jwst.py
tests/: conftest.py  test_alignment_meta.py  test_alignment_validation.py  test_astrodrizzle_helpers.py  test_astrodrizzle_output_path.py  test_astrometry.py  test_common_constants.py  test_common_options.py  test_common_settings.py  test_common_util.py  test_compress_reference.py  test_display.py  test_dolphot_c_python_parity.py  test_dolphot_catalog_hdf5.py  test_dolphot_install.py  test_dolphot_sky.py  test_dolphot_splitgroups.py  test_hst123.py  test_init.py  test_jhat_gaia_header.py  test_logging.py  test_obstable_drizname.py  test_options.py  test_paths.py  test_pipeline_cleanup_validation.py  test_pipeline_main.py  test_pipeline_mast_download.py  test_pipeline_methods.py  test_primitive_cleanup.py  test_primitives.py  test_progress_log.py  test_reference_download.py  test_run_dolphot.py  test_scrape_dolphot.py  test_settings.py  test_stdio.py  test_visit.py  test_wcs_utils.py  test_workdir_cleanup.py
