[build-system]
requires = ["setuptools>=64.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hst123"
dynamic = ["version"]
description = "An all-in-one script for downloading, registering, and drizzling HST images, running dolphot, and scraping data from dolphot catalogs."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
keywords = ["astronomy", "HST", "Hubble", "dolphot", "drizzle", "photometry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "setuptools>=64.0,<82",  # stwcs uses pkg_resources; setuptools 82+ removed it
    "astropy>=5.3,<6",
    "astroquery>=0.4.6",
    "astroscrappy>=1.1.0",
    "drizzlepac>=3.5.1",
    "numpy>=1.24,<2",
    "progressbar33>=2.4",
    "python-dateutil>=2.8.2",
    "requests>=2.32.0",
    "scipy>=1.10,<2",
    "stwcs>=1.7.2",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.2",
]

[project.scripts]
hst123 = "hst123:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hst123*"]

[tool.setuptools_scm]
# Version from git tag (e.g. 1.0.7); fallback when not in a git repo or no tags
fallback_version = "0.0.0+unknown"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
