[build-system]
requires = ["setuptools>=64.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hst123"
dynamic = ["version"]
description = "An all-in-one script for downloading, registering, and drizzling HST images, running dolphot, and scraping data from dolphot catalogs."
readme = "README.md"
# 3.12 only: NumPy 1.x / Astropy 5.x and DrizzlePac are validated on 3.12; 3.13+ needs a newer stack.
requires-python = ">=3.12,<3.13"
license = { text = "BSD-3-Clause" }
keywords = ["astronomy", "HST", "Hubble", "dolphot", "drizzle", "photometry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "setuptools>=64.0,<82",  # stsci stack / pkg_resources consumers; setuptools 82+ removed it
    "astropy>=5.3,<6",
    "astroquery>=0.4.6",
    "astroscrappy>=1.1.0",
    "drizzlepac>=3.5.1",
    "numpy>=1.26,<2",  # 1.26+ wheels on Python 3.12; numpy 2 needs separate migration
    "progressbar33>=2.4",
    "python-dateutil>=2.8.2",
    "requests>=2.32.0",
    "scipy>=1.11,<2",  # 1.11+ has reliable wheels on Python 3.12 with NumPy 1.x
    "h5py>=3.8",  # DOLPHOT catalog HDF5 export (default after scrape)
    "jhat",
]

[project.optional-dependencies]
# Parallel JIT for Python calcsky fallback (large mosaics); `pip install .[perf]`
perf = [
    "numba>=0.59",  # 0.59+ supports Python 3.12
]
test = [
    "pytest>=7.0",
]
# Legacy extra for ``pip install .[hdf5]``; h5py is already a core dependency.
hdf5 = [
    "h5py>=3.8",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.2",
    "numpydoc>=1.5",
    "myst-parser>=2.0",
]

[project.scripts]
hst123 = "hst123:main"
hst123-install-dolphot = "hst123.dolphot_install:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hst123*"]

[tool.setuptools.package-data]
"hst123.utils.stwcs" = ["STWCS_VENDOR.txt"]

[tool.setuptools_scm]
# Version from git tag (e.g. 1.1.0); fallback when not in a git repo or no tags
fallback_version = "1.1.0"
# Write version into package for runtime and editable installs
write_to = "hst123/_version.py"
write_to_template = "__version__ = \"{version}\"\n"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "network: marks tests that require network access (deselect with '-m \"not network\"')",
    "dolphot: marks tests that require DOLPHOT executables on PATH (dolphot, calcsky; splitgroups/masks use Python by default); skip with '-m \"not dolphot\"'",
    "dolphot_parity: optional C vs Python parity (calcsky, splitgroups, *mask); skips when binaries or DOLPHOT tree missing",
]
# Do not use ``pyparsing.util.PyparsingDeprecationWarning`` (removed/moved in newer pyparsing; breaks pytest on Py3.13+).
filterwarnings = [
    "ignore:.*leaveWhitespace.*:DeprecationWarning",
]
